@@ -217,6 +217,7 @@ typedef enum
    | IPMICONSOLE_WORKAROUND_OPEN_SESSION_PRIVILEGE          \
    | IPMICONSOLE_WORKAROUND_NON_EMPTY_INTEGRITY_CHECK_VALUE \
    | IPMICONSOLE_WORKAROUND_NO_CHECKSUM_CHECK               \
+   | IPMICONSOLE_WORKAROUND_SERIAL_ALERTS_DEFERRED          \
    | IPMICONSOLE_WORKAROUND_IGNORE_SOL_PAYLOAD_SIZE         \
    | IPMICONSOLE_WORKAROUND_IGNORE_SOL_PORT                 \
    | IPMICONSOLE_WORKAROUND_SKIP_SOL_ACTIVATION_STATUS      \
