@@ -120,10 +120,10 @@ workarounds are supported: assumeio, spinpoll, idzero, forcepermsg,
 unexpectedauth, endianseq, noauthcodecheck, authcap, nochecksumcheck,
 intel20, supermicro20, sun20, opensesspriv, integritycheckvalue,
 assumemaxsdrrecordcount, solpayloadsize, solport, solstatus,
-solchannelsupport, skipchecks, assumesystemevent, discretereading,
-ignorescanningdisabled, assumebmcowner, ignoreauthcode, slowcommit,
-veryslowcommit, solchannelassumelanchannel, ignorestateflag,
-malformedack,guidformat.
+solchannelsupport, serialalertsdeferred, skipchecks,
+assumesystemevent, discretereading, ignorescanningdisabled,
+assumebmcowner, ignoreauthcode, slowcommit, veryslowcommit,
+solchannelassumelanchannel, ignorestateflag, malformedack,guidformat.
 
 .SH "SDR OPTIONS"
 The following options are specific to tools that use the sensor 
